# Cxx-Project

./: .gitignore  CMakeLists.txt  main.cpp
src/: main.cpp
src/core/: battle.cpp  battle.h  cave.cpp  cave.h  enums.h  exceptions.h  forest.cpp  forest.h  input.cpp  input.h  location.cpp  location.h  mountain.cpp  mountain.h  save_load.h  shop.cpp  shop.h  swamp.cpp  swamp.h  town.cpp  town.h  user_interface.h  world.h
src/entities/: dialogue.h  enemy.cpp  enemy.h  entity.cpp  entity.h  npc.cpp  npc.h  nps.h  player.cpp  player.h
src/items/armor/: armor.h
src/items/armour/: armor.cpp  armor.h  chestplate.h  helmet.h
src/items/consumables/: effect.cpp  effect.h  food.h  healthpoiton.cpp  healthpotion.h  poison.cpp  poison.h  stuff.cpp  stuff.h
src/items/weapon/: bow.h  morgenshtern.h  sword.cpp  sword.h  weapon.cpp  weapon.h
tests/: CMakeLists.txt  test_combat.cpp  test_entity.cpp  test_inventory.cpp  test_items.cpp  test_locations.cpp  test_player.cpp
